--- a/src/templates/regras-ativas.html
+++ b/src/templates/regras-ativas.html
@@ -12,7 +12,7 @@
                     <table class="table table-striped table-hover rules-table" id="rules-table">
                         <thead>
                             <tr>
-                                <th>Rule</th>
+                                <th>Regra</th>
                                 <th>Expira Em</th>
                                 <th>Actions</th>
                             </tr>
@@ -22,20 +22,18 @@
                             <tr>
                                 <td>iptables -A INPUT -p {{ rule.protocol }} --dport {{ rule.destination_port }} -s {{rule.source_ip}} -j DROP</td>
                                 <td>{{ rule.expires_in }}</td>
-                                <td><button class="btn btn-error" onclick="remove({{loop.index}} )"> Remover </button></td>
+                                <td><button class="btn btn-error" onclick="remove({{rule}})"> Remover </button></td>
                             </tr>
                             {% endfor %}
                         </tbody>
                     </table>
                 </div>
-
-                <form action="/remove-rule" style="display: none" id="remove-rule" method="POST">
-                    <input type="text" name="rule" id="rule" value="">
-                </form>
             </div>
         </div>
     </div>
 </div>
-<script src="{{ url_for('static', filename='scripts/regras-ativas.js') }}"></script>
+{% endblock %}
 
+{% block scripts %}
+<script src="{{ url_for('static', filename='scripts/regras-ativas.js') }}"></script>
 {% endblock %}
