--- a/src/templates/historico.html
+++ b/src/templates/historico.html
@@ -19,6 +19,7 @@
             </div>
         </div>
     </div>
+   
     <div class="columns">
         <div class="col-8 col-mx-auto board">
             <!-- Tabela de regras -->
@@ -38,4 +39,6 @@
 
 {% endblock %} 
 {% block scripts %}
-<script src="{{url_for('static', filename='scripts/historico.js')}}"></script> {% endblock%}
+
+<script src="{{url_for('static', filename='scripts/historico.js')}}"></script> 
+{% endblock%}
