--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -34,6 +34,7 @@ body{
 }
 .section-name h1{
     margin-bottom: 8px;
+    display: inline;
 }
 .field-name{
     display: inline-block !important;
@@ -71,4 +72,8 @@ label{
 
 .table td, .table th {
     border-bottom: .05rem solid #aaacbd;
+}
+
+.interval{
+    display: inline;
 }
