--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,7 +27,8 @@
         <section class="navbar-section">
             <a href="/configuracoes" class="btn btn-link">Configurações</a>
             <a href="/regras-ativas" class="btn btn-link">Regras ativas</a>
-            <a href="/historico" class="btn btn-link">Histórico de Regras</a>
+            <a href="/historico" class="btn btn-link">Histórico</a>
+            <a href="/estatisticas" class="btn btn-link">Estatisticas</a>
         </section>
         <section class="navbar-center">
             <span class="logo">Garf</span>
@@ -55,5 +56,7 @@
 <script src="{{url_for('static', filename='scripts/jquery-ui-1.12.1/jquery-ui.min.js')}}"></script>
 <script src="{{url_for('static', filename='scripts/ui.datepicker-pt-BR.js')}}"></script>
 {% block scripts %}{% endblock%}
-
+<script>
+    setInterval(function(){ window.reload(); }, 1000 * 60 * 4); // Regarrega a página a cada 4 mins
+</script>
 </html>
