ordernação do histórico

--- a/src/templates/configuracoes.html
+++ b/src/templates/configuracoes.html
@@ -28,7 +28,7 @@
                                 <input class="form-input" type="text" name="rule_dureation" value="{{ context.config.rule_dureation }}">
                             </div>
                             <p class="description">
-                                Tempo de duração das regras. Em minutos.
+                                Tempo de duração das regras. Em segundos.
                             </p>
                         </div>
                         <div class="form-group">
