--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,8 +10,8 @@
                 <div class="col-10 col-mx-auto config-fields">
                   <p>
                       GARF é um gerador automatizado de regras de firewall. Este baseia-se
-                      em dados coletados por servidores Honeypot e configurações definidas pelo
-                      usuário para gerar as regras que serão aplicadass no firewall. A ferramenta 
+                      em dados coletados de logs de aplicações Honeypot e configurações definidas pelo
+                      usuário para gerar e adicionar regras no iptables. A ferramenta 
                       usa as seguintes tecnologias:
                   </p>
                   <ul>
